# autonomous-cicd-template

./: .env.example  .gitignore  pyproject.toml
.ai/: CLAUDE_RULES.md
.ai/COMPLIANCE/: README.md
.claude/: settings.local.json
.github/workflows/: ai-review.yml  self-heal.yml
docs/: N8N_CLAUDE_CODE_INTEGRATION.md
scripts/: ai_engine.py  ai_rules_audit.py  ai_rules_check.py  n8n-cli.js  pr_self_heal.py
trust-portal/: index.html  styles.css
